# pixipoc

./: pixi.toml  pyproject.toml
pixipoc/: pixi.toml  pyproject.toml
pixipoc/src/pixipoc/: __init__.py
src/: main.cpp
src/pixipoc/: __init__.py
subpkg/: pixi.toml  pyproject.toml
