[project]
name = "pixipoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guillaume Quenneville", email = "32133082+GuillaumeQuenneville@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pixipoc = "pixipoc:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=3"]
build-backend = "scikit_build_core.build"
