[project]
name = "pixipoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Guillaume Quenneville", email = "32133082+GuillaumeQuenneville@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
